--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "date-fns": "^2.12.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.0.2",
+    "typeorm": "^0.2.24"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
