--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@types/mongodb": "^3.5.22",
-    "bcryptjs": "^2.4.3",
+		"bcryptjs": "^2.4.3",
+    "celebrate": "^12.1.1",
     "cors": "^2.8.5",
     "date-fns": "^2.12.0",
     "express": "^4.17.1",
@@ -30,9 +30,11 @@
     "uuidv4": "^6.0.7"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
+		"@types/bcryptjs": "^2.4.2",
+		"@types/mongodb": "^3.5.22",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/hapi__joi": "^17.1.2",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/multer": "^1.4.3",
