--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "test": "jest"
   },
   "dependencies": {
-		"bcryptjs": "^2.4.3",
+    "bcryptjs": "^2.4.3",
     "celebrate": "^12.1.1",
     "cors": "^2.8.5",
     "date-fns": "^2.12.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
@@ -30,13 +31,13 @@
     "uuidv4": "^6.0.7"
   },
   "devDependencies": {
-		"@types/bcryptjs": "^2.4.2",
-		"@types/mongodb": "^3.5.22",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/hapi__joi": "^17.1.2",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.3.9",
+    "@types/mongodb": "^3.5.22",
     "@types/multer": "^1.4.3",
     "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
